[gd_scene load_steps=20 format=3 uid="uid://b021iasahg234"]

[ext_resource type="Script" uid="uid://bk5upyxc362t4" path="res://UI/MainMenu/main_menu.gd" id="1_u0e1r"]
[ext_resource type="AudioStream" uid="uid://vwarkgdfgwtn" path="res://Music/ambience-birds-wind-422207.mp3" id="3_ejg71"]
[ext_resource type="Script" uid="uid://cvikpqyxjqs5g" path="res://Scripts/GameManager/game_manager.gd" id="3_mg3m2"]
[ext_resource type="Script" uid="uid://b0hnw34sgf8um" path="res://Scripts/WaveManager/wave_manager.gd" id="8_8uw0o"]
[ext_resource type="Texture2D" uid="uid://cy8pou57fxnrh" path="res://Art/BG/RealBG.png" id="8_ejg71"]
[ext_resource type="Script" uid="uid://dssq5y3twr3y4" path="res://Scripts/WaveManager/wave_data.gd" id="9_ql5ya"]
[ext_resource type="Texture2D" uid="uid://bqu44ygj7r6ta" path="res://Art/Sandbag/Sandbag.png" id="10_8h8a5"]
[ext_resource type="Resource" uid="uid://dllb7i7ax465" path="res://Data/WaveData/Test/quick_individual_unit_data.tres" id="10_ka3nr"]
[ext_resource type="Resource" uid="uid://che2jquh8hejp" path="res://Data/WaveData/test_data_2.tres" id="11_48knj"]
[ext_resource type="Shader" uid="uid://dpwvb4uoa52xy" path="res://UI/MainMenu/blur_backbuffer.gdshader" id="11_ejg71"]
[ext_resource type="Texture2D" uid="uid://dnsrbb1pdfvib" path="res://Art/Castle/Castle.png" id="11_xron6"]
[ext_resource type="AudioStream" uid="uid://cw3snnmx6tkgm" path="res://SFX/UI/confirm_style_2_003.ogg" id="12_euymq"]
[ext_resource type="PackedScene" uid="uid://djs38cy8bwdv7" path="res://Objects/Enemy/enemy_base.tscn" id="12_m2y5l"]
[ext_resource type="AudioStream" uid="uid://crjtqxhwu0o1h" path="res://SFX/UI/back_style_2_004.ogg" id="13_2d5va"]
[ext_resource type="AudioStream" uid="uid://bru8fxgr61x27" path="res://Music/pixel-fantasia-355123.mp3" id="14_2d5va"]
[ext_resource type="Script" uid="uid://c60bxtqxj72gr" path="res://Objects/Spawner/spawner.gd" id="17_qby1g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80nbo"]
size = Vector2(2.5714264, 12.744469)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnp6m"]
shader = ExtResource("11_ejg71")
shader_parameter/blur_amount = 35.0000016625

[sub_resource type="LabelSettings" id="LabelSettings_u0e1r"]
font_size = 87
outline_size = 4
outline_color = Color(0.036100525, 0.22845358, 0.11180953, 1)

[node name="MainMenu" type="Node"]
script = ExtResource("1_u0e1r")

[node name="GameManager" type="Node" parent="." groups=["game_manager"]]
script = ExtResource("3_mg3m2")
day_time_length = 99999999.0
bird_ambiance = ExtResource("3_ejg71")

[node name="SpawnTimer" type="Timer" parent="GameManager"]

[node name="DayTimer" type="Timer" parent="GameManager"]
one_shot = true

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("8_8uw0o")
waves = Array[ExtResource("9_ql5ya")]([ExtResource("10_ka3nr"), ExtResource("11_48knj")])
enemy_base_scene = ExtResource("12_m2y5l")
metadata/_custom_type_script = "uid://b0hnw34sgf8um"

[node name="BG2" type="TextureRect" parent="."]
modulate = Color(0.8530103, 0.7348689, 0.6901674, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ejg71")
expand_mode = 1

[node name="Environment" type="Node2D" parent="."]

[node name="Art" type="Node2D" parent="Environment"]
position = Vector2(1007, 676)

[node name="Sandbag" type="Sprite2D" parent="Environment/Art"]
position = Vector2(5, 3.999999)
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag2" type="Sprite2D" parent="Environment/Art"]
position = Vector2(4, -26)
rotation = -0.22331324
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag3" type="Sprite2D" parent="Environment/Art"]
position = Vector2(0.99999905, -61.000008)
rotation = 0.025571465
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag4" type="Sprite2D" parent="Environment/Art"]
position = Vector2(-1.0000005, -91)
rotation = -0.2453804
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag5" type="Sprite2D" parent="Environment/Art"]
position = Vector2(-4.000001, -123)
rotation = 0.07008958
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag6" type="Sprite2D" parent="Environment/Art"]
position = Vector2(1.791565, -150.53967)
rotation = 0.16627002
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag7" type="Sprite2D" parent="Environment/Art"]
position = Vector2(0.79156446, -180.53969)
rotation = -0.057043225
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag8" type="Sprite2D" parent="Environment/Art"]
position = Vector2(2.9999988, -216)
rotation = 0.19184148
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag9" type="Sprite2D" parent="Environment/Art"]
position = Vector2(2.9999995, -252)
rotation = -0.079110384
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag10" type="Sprite2D" parent="Environment/Art"]
position = Vector2(3.999998, -280.99997)
rotation = 0.2363596
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Sandbag11" type="Sprite2D" parent="Environment/Art"]
position = Vector2(4.999998, -312.99997)
rotation = -0.028782487
scale = Vector2(0.738, 0.738)
texture = ExtResource("10_8h8a5")

[node name="Castle2" type="Sprite2D" parent="Environment/Art"]
position = Vector2(300, -305.56256)
scale = Vector2(2.2187493, 2.2187493)
texture = ExtResource("11_xron6")

[node name="Castle" type="Sprite2D" parent="Environment/Art"]
position = Vector2(238, -170.2306)
scale = Vector2(2.0937502, 2.0937502)
texture = ExtResource("11_xron6")

[node name="WallArea2D" type="Area2D" parent="Environment" groups=["wall"]]
position = Vector2(987.00006, 606)
scale = Vector2(14.00005, 28.99991)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/WallArea2D"]
position = Vector2(0.6070633, -3.007103)
scale = Vector2(0.9999996, 0.9999996)
shape = SubResource("RectangleShape2D_80nbo")

[node name="Entities" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="Entities" groups=["enemies"]]

[node name="Allies" type="Node2D" parent="Entities" groups=["allies"]]

[node name="Ally1Spawn" type="Marker2D" parent="Entities/Allies"]
unique_name_in_owner = true
position = Vector2(1063, 387)

[node name="Ally2Spawn" type="Marker2D" parent="Entities/Allies"]
unique_name_in_owner = true
position = Vector2(1063, 546)

[node name="Ally3Spawn" type="Marker2D" parent="Entities/Allies"]
unique_name_in_owner = true
position = Vector2(1063, 607)

[node name="Ally4Spawn" type="Marker2D" parent="Entities/Allies"]
unique_name_in_owner = true
position = Vector2(1063, 675)

[node name="Neutral" type="Node2D" parent="Entities" groups=["neutral_entities"]]

[node name="Spawner" type="Node2D" parent="." groups=["spawner"]]
unique_name_in_owner = true
position = Vector2(-181, 0)
script = ExtResource("17_qby1g")

[node name="Ground" type="Node2D" parent="Spawner"]
unique_name_in_owner = true

[node name="Pos1" type="Marker2D" parent="Spawner/Ground"]
position = Vector2(0, 607)

[node name="Pos2" type="Marker2D" parent="Spawner/Ground"]
position = Vector2(0, 557)

[node name="Pos3" type="Marker2D" parent="Spawner/Ground"]
position = Vector2(0, 507)

[node name="Pos4" type="Marker2D" parent="Spawner/Ground"]
position = Vector2(0, 457)

[node name="Pos5" type="Marker2D" parent="Spawner/Ground"]
position = Vector2(0, 407)

[node name="Air" type="Node2D" parent="Spawner"]
unique_name_in_owner = true

[node name="Pos1" type="Marker2D" parent="Spawner/Air"]
position = Vector2(2, 224)

[node name="Pos2" type="Marker2D" parent="Spawner/Air"]
position = Vector2(2, 168)

[node name="Pos3" type="Marker2D" parent="Spawner/Air"]
position = Vector2(2, 106)

[node name="BlurOverlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lnp6m")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.5
offset_top = -227.0
offset_right = 516.5
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "WAVE DEFENDER: APOCALYPSE"
label_settings = SubResource("LabelSettings_u0e1r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -49.0
offset_right = 129.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="CanvasLayer/MainMenuControl/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/MainMenuControl/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "How to Play"

[node name="OptionsButton" type="Button" parent="CanvasLayer/MainMenuControl/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="CreditsButton" type="Button" parent="CanvasLayer/MainMenuControl/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenuControl/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit
"

[node name="MenuSound1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_euymq")
bus = &"SFX"

[node name="MenuSound2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_2d5va")
bus = &"SFX"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_2d5va")
autoplay = true
bus = &"Music"

[connection signal="all_enemies_killed" from="GameManager" to="GameManager" method="_on_all_enemies_killed"]
[connection signal="day_timer_finished" from="GameManager" to="GameManager" method="_on_day_timer_finished"]
[connection signal="start_new_day" from="GameManager" to="GameManager" method="_on_start_new_day"]
[connection signal="timeout" from="GameManager/SpawnTimer" to="GameManager" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="GameManager/DayTimer" to="GameManager" method="_on_day_timer_timeout"]
[connection signal="child_exiting_tree" from="Entities/Enemies" to="GameManager" method="_on_enemies_child_exiting_tree"]
[connection signal="pressed" from="CanvasLayer/MainMenuControl/ButtonsVBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuControl/ButtonsVBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuControl/ButtonsVBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuControl/ButtonsVBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuControl/ButtonsVBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
